# CMake-OpenCV

./: .gitignore  CMakeLists.txt  main.cpp
lib/math/: operations.cpp  operations.hpp
